Little tidying up

--- a/docs/examples/linegraph/linegraph_app_tutorial.ipynb
+++ b/docs/examples/linegraph/linegraph_app_tutorial.ipynb
@@ -90,8 +90,8 @@
       "├─📄 linegraph_app.ipynb\n",
       "├─📁 linegraph_core/\n",
       "│ ├─📄 __main__.py\n",
-      "│ ├─📄 script_linegraph.py\n",
       "│ ├─📄 make_graph.py\n",
+      "│ ├─📄 add_linegraph.py\n",
       "│ ├─📄 input_schema_linegraph.py\n",
       "│ └─📄 __init__.py\n",
       "├─📁 linegraph_appdata/\n",
@@ -194,7 +194,7 @@
        "\u001b[0;34m\u001b[0m    \u001b[0mpath\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mpathlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
        "\u001b[0;34m\u001b[0m    \u001b[0msave_controls\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mipyautoui\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautoui\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSaveControls\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m<\u001b[0m\u001b[0mSaveControls\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave_buttonbar\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'save_buttonbar'\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
        "\u001b[0;34m\u001b[0m    \u001b[0mshow_raw\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mbool\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mfn_onsave\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mUnion\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mCallable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mList\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mCallable\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m<\u001b[0m\u001b[0mfunction\u001b[0m \u001b[0mAutoUi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0;32mlambda\u001b[0m\u001b[0;34m>\u001b[0m \u001b[0mat\u001b[0m \u001b[0;36m0x7f04b8b3a310\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mfn_onsave\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mUnion\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mCallable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mList\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mCallable\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m<\u001b[0m\u001b[0mfunction\u001b[0m \u001b[0mAutoUi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0;32mlambda\u001b[0m\u001b[0;34m>\u001b[0m \u001b[0mat\u001b[0m \u001b[0;36m0x7f77006193a0\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
        "\u001b[0;34m\u001b[0m    \u001b[0mvalidate_onchange\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
        "\u001b[0;34m\u001b[0m    \u001b[0mupdate_fdir_to_path_parent\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
        "\u001b[0;34m\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -224,7 +224,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b55344aac39243b4a3ef57ef00e31165",
+       "model_id": "30cc575180904963b185118766b5f44b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -272,7 +272,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "70839ff7c49d41129902e35c3ebbaf14",
+       "model_id": "a72d6de7eef547a2bf7bd689ced67c50",
        "version_major": 2,
        "version_minor": 0
       },
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "a8a0e217-3e02-49eb-8e8d-82620c8f3acb",
    "metadata": {},
    "outputs": [],
@@ -552,7 +552,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "33c405270be84a939672268c4b49fbaf",
+       "model_id": "60d7a79911f34ce6a27e06dfba8c2f2d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -594,7 +594,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1eccf3fcddf141cdb46d26d1c7f07c0e",
+       "model_id": "425467ad80764a7580477d0cbbe38dff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -702,7 +702,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "36e6662837ea4120a97cea260f3298db",
+       "model_id": "34874772a1a34c17b60f4f55cfa79280",
        "version_major": 2,
        "version_minor": 0
       },
@@ -777,7 +777,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ccdf69b2d17148e789c1f03bd39354f5",
+       "model_id": "4154ad17470a4424a77271401bbbd4e2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -792,7 +792,9 @@
    "source": [
     "def fn_add_show(app):\n",
     "    clear_output()\n",
-    "    display(AddNamedRun(fn_add=app.actions.add))\n",
+    "    fn_my_callable =lambda name=\"asdf\": print(\"aasdfasd\")\n",
+    "    fn_add_new = lambda name=\"asdf\": [f(name) for f in [app.actions.add, fn_my_callable]]\n",
+    "    display(AddNamedRun(fn_add=fn_add_new)) #  app.actions.add\n",
     "\n",
     "\n",
     "class LineGraphConfigBatch(ConfigBatch):\n",
@@ -804,6 +806,124 @@
     "\n",
     "class LineGraphBatchActions(BatchShellActions):\n",
     "    \n",
+    "    @validator(\"add_show\", always=True)\n",
+    "    def _add_show(cls, v, values):\n",
+    "        return functools.partial(fn_add_show, values[\"app\"])\n",
+    "    \n",
+    "    @validator(\"config\", always=True)\n",
+    "    def _config(cls, v, values):\n",
+    "        \"\"\"bundles RunApp up as a single argument callable\"\"\"\n",
+    "        if type(v) == dict:\n",
+    "            v = LineGraphConfigBatch(**v)\n",
+    "        return v\n",
+    "\n",
+    "    @validator(\"runlog_show\", always=True)\n",
+    "    def _runlog_show(cls, v, values):\n",
+    "        return None\n",
+    "\n",
+    "config_batch = LineGraphConfigBatch(\n",
+    "    fdir_root=DIR_APPDATA,\n",
+    "    # cls_config=MyConfigShell,\n",
+    "    title=\"\"\"# Plot Straight Lines\\n### example RunApp\"\"\",\n",
+    ")\n",
+    "if config_batch.fpth_config.is_file():\n",
+    "    config_batch = LineGraphConfigBatch.parse_file(config_batch.fpth_config)\n",
+    "app = BatchApp(config_batch, cls_actions=LineGraphBatchActions)\n",
+    "display(app)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "064ff8c1-2eeb-467d-89c8-a36446f9eb19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import typing\n",
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display\n",
+    "from ipyautoui.custom.modelrun import RunName\n",
+    "from ipyautoui.constants import BUTTON_MIN_SIZE\n",
+    "from markdown import markdown\n",
+    "from ipyrun.constants import FILENAME_FORBIDDEN_CHARACTERS\n",
+    "import traitlets\n",
+    "import stringcase\n",
+    "\n",
+    "\n",
+    "class RunApps:\n",
+    "    None\n",
+    "    \n",
+    "class AddInput(traitlets.HasTraits):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        app: typing.Type[RunApps] = None,\n",
+    "        fn_add: typing.Callable = None,\n",
+    "    ):\n",
+    "        \"\"\"\n",
+    "        a ui element for adding new runs to RunApps\n",
+    "\n",
+    "        Args:\n",
+    "            app (RunApps): the app that will be modified by this class\n",
+    "            fn_add (typing.Callable): a function that is executed to add a new run to the \"app\"\n",
+    "                on_click of a button. the main app is passed to the function using functools:\n",
+    "\n",
+    "        Code:\n",
+    "            ```\n",
+    "            def _init_controls(self):\n",
+    "                self.add.on_click(self._add)\n",
+    "\n",
+    "            def _add(self, click):\n",
+    "                return self.fn_add(cls=self.app, name=self.value)\n",
+    "            ```\n",
+    "        \"\"\"\n",
+    "        self.app = app\n",
+    "        self.fn_add = fn_add\n",
+    "\n",
+    "    def _add(self, click):\n",
+    "        print(value)\n",
+    "        # path_inputs = app.config.configs[-1].fpths_inputs[0]\n",
+    "        # di = json.load(path_inputs.open())\n",
+    "        # line_graph = LineGraph(**di)\n",
+    "        # line_graph.m = 10\n",
+    "        # out_file = open(path_inputs, \"w\")\n",
+    "        # json.dump(line_graph.dict(), out_file, indent=4)\n",
+    "        return self.fn_add()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "6637be6f-72d4-45aa-97b7-1bea4a50ff76",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c8b022e39e764941bef3d5d0ca833831",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "BatchApp(children=(VBox(children=(HTML(value='<h1>Plot Straight Lines</h1>\\n<h3>example RunApp</h3>'), HBox(ch…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def fn_add_show(app):\n",
+    "    clear_output()    \n",
+    "    display(AddInput(fn_add=app.actions.add))    \n",
+    "    \n",
+    "\n",
+    "class LineGraphConfigBatch(ConfigBatch):\n",
+    "    @validator(\"cls_config\", always=True)\n",
+    "    def _cls_config(cls, v, values):\n",
+    "        \"\"\"bundles RunApp up as a single argument callable\"\"\"\n",
+    "        return LineGraphConfigShell\n",
+    "\n",
+    "class LineGraphBatchActions(BatchShellActions):   \n",
     "    @validator(\"add_show\", always=True)\n",
     "    def _add_show(cls, v, values):\n",
     "        return functools.partial(fn_add_show, values[\"app\"])\n",
@@ -844,14 +964,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "7982e978-57ce-4964-9307-51c6cf97af55",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "544872d825c64c6ca6fcb7e594588899",
+       "model_id": "afd317be199143fe91273eb304e7dfcb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -965,14 +1085,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "060e1ff5-b285-426a-99d6-d2d1b3991174",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "622dd067929040b3a40f174a104c4e5b",
+       "model_id": "4e9d9568e6c749ad9016fddbfa361913",
        "version_major": 2,
        "version_minor": 0
       },
