minor updates + dev reqs

--- a/docs/examples/linegraph/linegraph_app.ipynb
+++ b/docs/examples/linegraph/linegraph_app.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5248ebdc233747b5aef56c5738cb130c",
+       "model_id": "282ee05eaf774a9e88cbe05e0f4740ff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -36,13 +36,18 @@
     "from pydantic import validator\n",
     "from IPython.display import display\n",
     "\n",
+    "sys.path.append(\n",
+    "    str(pathlib.Path(\"../../../src\").resolve())\n",
+    ")  # append ipyrun. TODO: for dev only. remove at build time.\n",
+    "sys.path.append(\n",
+    "    str(pathlib.Path(\"../../../../ipyautoui/src\").resolve())\n",
+    ")  # append ipyautoui. TODO: for dev only. remove at build time.\n",
+    "\n",
+    "\n",
     "from ipyautoui import AutoUi\n",
     "from ipyautoui import AutoDisplay\n",
     "from ipyautoui.autodisplayfile_renderers import display_python_file\n",
     "\n",
-    "sys.path.append(\n",
-    "    str(pathlib.Path(\"../../../src\").resolve())\n",
-    ")  # append ipyrun. TODO: for dev only. remove at build time.\n",
     "\n",
     "\n",
     "from ipyrun import RunApp, BatchApp, ConfigShell, DefaultConfigShell, RunShellActions\n",
@@ -135,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e4b2093-ff6b-4aa0-a0e5-acde32023b50",
+   "id": "63de31bb-5da5-4552-b102-6a0b9988ad33",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -157,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
