--- a/docs/examples/linegraph/linegraph_app_tutorial.ipynb
+++ b/docs/examples/linegraph/linegraph_app_tutorial.ipynb
@@ -648,8 +648,8 @@
    "source": [
     "- As you can see above, given this set of inputs the shell command has been generated \n",
     "- We can either: \n",
-    "    - 1. explictly give fpths_outputs as a variable, or \n",
-    "    - 2. extend `DefaultConfigShell` to generate `fpths_outputs` from other variables\n",
+    "  1. explictly give fpths_outputs as a variable, or \n",
+    "  2. extend `DefaultConfigShell` to generate `fpths_outputs` from other variables\n",
     "- option 2. is favourable as it can then be easily extended to an arbitrary number of runs, and the names of the output files will follow the same logical naming structure as the input files"
    ]
   },
