--- a/docs/examples/linegraph/linegraph_app.ipynb
+++ b/docs/examples/linegraph/linegraph_app.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "282ee05eaf774a9e88cbe05e0f4740ff",
+       "model_id": "832c667946a142ddb9d47b540c9e880a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -46,7 +46,7 @@
     "\n",
     "from ipyautoui import AutoUi\n",
     "from ipyautoui import AutoDisplay\n",
-    "from ipyautoui.autodisplayfile_renderers import display_python_file\n",
+    "from ipyautoui._utils import display_python_file\n",
     "\n",
     "\n",
     "\n",
