update `file` method. avoid `parse_file` method. other minor pydantic updates in `runshell.py`

--- a/docs/examples/linegraph/linegraph_app_tutorial.ipynb
+++ b/docs/examples/linegraph/linegraph_app_tutorial.ipynb
@@ -773,7 +773,7 @@
     "    title=\"\"\"# Plot Straight Lines\\n### example RunApp\"\"\",\n",
     ")\n",
     "if config_batch.fpth_config.is_file():\n",
-    "    config_batch = LineGraphConfigBatch.parse_file(config_batch.fpth_config)\n",
+    "    config_batch = LineGraphConfigBatch(**json.loads(config_batch.fpth_config.read_text()))\n",
     "app = BatchApp(config_batch, cls_actions=LineGraphBatchActions)\n",
     "display(app)"
    ]
@@ -860,7 +860,7 @@
     "    title=\"\"\"# Plot Straight Lines\\n### example RunApp\"\"\",\n",
     ")\n",
     "if config_batch.fpth_config.is_file():\n",
-    "    config_batch = LineGraphConfigBatch.parse_file(config_batch.fpth_config)\n",
+    "    config_batch = LineGraphConfigBatch(**json.loads(config_batch.fpth_config.read_text()))\n",
     "app = BatchApp(config_batch, cls_actions=LineGraphBatchActions)\n",
     "display(app)"
    ]
@@ -978,7 +978,7 @@
     "    title=\"\"\"# Plot Straight Lines\\n### example RunApp\"\"\",\n",
     ")\n",
     "if config_batch.fpth_config.is_file():\n",
-    "    config_batch = LineGraphConfigBatch.parse_file(config_batch.fpth_config)\n",
+    "    config_batch = LineGraphConfigBatch(**json.loads(config_batch.fpth_config.read_text()))\n",
     "app = BatchApp(config_batch, cls_actions=LineGraphBatchActions)\n",
     "display(app)"
    ]
@@ -1103,7 +1103,7 @@
     "    title=\"\"\"# Plot Straight Lines\\n### example RunApp\"\"\",\n",
     ")\n",
     "if config_batch.fpth_config.is_file():\n",
-    "    config_batch = LineGraphConfigBatch.parse_file(config_batch.fpth_config)\n",
+    "    config_batch = LineGraphConfigBatch(**json.loads(config_batch.fpth_config.read_text()))\n",
     "app = BatchApp(config_batch, cls_actions=LineGraphBatchActions)\n",
     "display(app)"
    ]
@@ -1159,7 +1159,7 @@
     "    title=\"\"\"# Plot Straight Lines\\n### example RunApp\"\"\",\n",
     ")\n",
     "if config_batch.fpth_config.is_file():\n",
-    "    config_batch = LineGraphConfigBatch.parse_file(config_batch.fpth_config)\n",
+    "    config_batch = LineGraphConfigBatch(**json.loads(config_batch.fpth_config.read_text()))\n",
     "app = BatchApp(config_batch, cls_actions=LineGraphBatchActions)\n",
     "display(app)"
    ]
