--- a/docs/examples/linegraph/linegraph_app.ipynb
+++ b/docs/examples/linegraph/linegraph_app.ipynb
@@ -132,7 +132,7 @@
                 "    title=\"\"\"# Plot Straight Lines\\n### example RunApp\"\"\",\n",
                 ")\n",
                 "if config_batch.fpth_config.is_file():\n",
-                "    config_batch = LineGraphConfigBatch.parse_file(config_batch.fpth_config)\n",
+                "    config_batch = LineGraphConfigBatch(**json.loads(config_batch.fpth_config.read_text()))\n",
                 "app = BatchApp(config_batch, cls_actions=LineGraphBatchActions)\n",
                 "display(app)"
             ]
